--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -4,11 +4,12 @@
   background-color: #2e2b27;
   display: flex;
   justify-content: center;
+  align-items: center;
 
   .navList--image {
     width: 100px;
     height: 100px;
-    background-color: rgb(20, 208, 241);
+    background-color: #14d0f1;
     background-image: url(../../assets/images/mainIcon.png);
     background-size: 100px;
     background-position: center;
@@ -16,10 +17,23 @@
     border-radius: 50px;
     content: 'lol';
     transition: all 1.5s;
+    margin: 0 50px;
   }
 
-  .navList--image:hover {
-    background-image: none;
-    width: 100%;
+  .navList--link {
+    font-weight: 600;
+    padding: 10px;
+    letter-spacing: 2px;
+    font-size: 20px;
+    color: #fff;
+    margin: 0 20px;
+    transition: all 0.3s;
+    border: none;
+    border-radius: 10px;
+  }
+
+  .navList--link:hover {
+    background-color: #14d0f1;
+    color: #000;
   }
 }
