--- a/src/components/Homes/style.scss
+++ b/src/components/Homes/style.scss
@@ -1,5 +1,5 @@
-.projectsBox {
+.homesBox {
   width: 100%;
   min-height: calc(100vh - 100px);
-  background-color: #00ff00;
+  background-color: #ffff00;
 }
